--- a/weblab-json-schema/pom.xml
+++ b/weblab-json-schema/pom.xml
@@ -42,5 +42,10 @@
             <artifactId>weblab-spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
