--- a/weblab-cross-context/pom.xml
+++ b/weblab-cross-context/pom.xml
@@ -48,7 +48,11 @@
             <artifactId>spring-security-web</artifactId>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+            <version>1.3.3.RELEASE</version>
+        </dependency>
         <dependency>
             <groupId>ucles.weblab</groupId>
             <artifactId>weblab-spring-boot-starter-test</artifactId>
