--- a/weblab-forms/pom.xml
+++ b/weblab-forms/pom.xml
@@ -80,6 +80,14 @@
             <optional>true</optional>
         </dependency>
         
+        <dependency>
+            <groupId>org.immutables</groupId>
+            <artifactId>value</artifactId>
+            <version>2.2.5</version>
+            <scope>provided</scope>
+        </dependency>
+
+        
         <!-- Test dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
