--- a/weblab-forms/pom.xml
+++ b/weblab-forms/pom.xml
@@ -70,7 +70,12 @@
             <artifactId>spring-hateoas</artifactId>
             <optional>true</optional>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <version>${spring-boot.version}</version>
+            <optional>true</optional>
+        </dependency>
         <!--jackson -->
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
