--- a/weblab-forms/src/test/resources/application.properties
+++ b/weblab-forms/src/test/resources/application.properties
@@ -1,1 +1,3 @@
 spring.jackson.serialization.write_dates_as_timestamps=false
+weblab.forms.business-stream.FBU=Fish Business Unit
+weblab.forms.business-stream.CBU=Chicken Business Unit
