chore(ci): Extract parent POM. Update GAVs

--- a/pom.xml
+++ b/pom.xml
@@ -5,158 +5,40 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ucles.weblab</groupId>
+    <groupId>com.github.cambridgeweblab.api-schema</groupId>
     <artifactId>weblab-api-schema</artifactId>
     <packaging>pom</packaging>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.3.0-SNAPSHOT</version>
 
     <modules>
+        <module>parent</module>
         <module>weblab-cross-context</module>
         <module>weblab-forms</module>
         <module>weblab-json-schema</module>
     </modules>
 
-    <properties>
-        <common-java.version>2.0.0-SNAPSHOT</common-java.version>
-        <spring-boot.version>2.0.0.RELEASE</spring-boot.version>
-        <java.version>1.8</java.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <maven.compiler.source>${java.version}</maven.compiler.source>
-        <maven.compiler.target>${java.version}</maven.compiler.target>
-    </properties>
-
-    <distributionManagement>
-        <repository>
-            <id>maven-s3-release-repo</id>
-            <name>AWS Release Repository</name>
-            <url>s3://mvnrepository.ucles.org.uk/releases</url>
-        </repository>
-        <snapshotRepository>
-            <id>maven-s3-snapshot-repo</id>
-            <name>AWS Snapshot Repository</name>
-            <url>s3://mvnrepository.ucles.org.uk/snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
 
     <repositories>
         <repository>
-            <id>maven-s3-release-repo</id>
-            <name>AWS Release Repository</name>
-            <url>http://mvnrepository.ucles.org.uk.s3-website-eu-west-1.amazonaws.com/releases</url>
-        </repository>
-        <repository>
-            <id>maven-s3-snapshot-repo</id>
-            <name>AWS Snapshot Repository</name>
-            <url>http://mvnrepository.ucles.org.uk.s3-website-eu-west-1.amazonaws.com/snapshots</url>
-            <snapshots/>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
         </repository>
     </repositories>
 
     <pluginRepositories>
         <pluginRepository>
-            <id>maven-s3-release-repo</id>
-            <name>AWS Release Repository</name>
-            <url>http://mvnrepository.ucles.org.uk.s3-website-eu-west-1.amazonaws.com/releases</url>
-        </pluginRepository>
-        <pluginRepository>
-            <id>maven-s3-snapshot-repo</id>
-            <name>AWS Snapshot Repository</name>
-            <url>http://mvnrepository.ucles.org.uk.s3-website-eu-west-1.amazonaws.com/snapshots</url>
-            <snapshots/>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
         </pluginRepository>
     </pluginRepositories>
 
-    <dependencyManagement>
-        <dependencies>
-            <!-- WEBLAB COMMON -->
-            <dependency>
-                <groupId>ucles.weblab</groupId>
-                <artifactId>weblab-common-java</artifactId>
-                <version>${common-java.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
-    <build>
-        <extensions>
-            <extension>
-                <groupId>org.springframework.build</groupId>
-                <artifactId>aws-maven</artifactId>
-                <version>5.0.0.RELEASE</version>
-            </extension>
-        </extensions>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>3.0.1</version>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-pmd-plugin</artifactId>
-                <version>3.7</version>
-                <configuration>
-                    <rulesets>
-                        <ruleset>lint/pmd-ruleset.xml</ruleset>
-                    </rulesets>
-                    <printFailingErrors>true</printFailingErrors>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>check</goal>
-                            <goal>cpd-check</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <dependencies>
-                    <dependency>
-                        <groupId>ucles.weblab</groupId>
-                        <artifactId>weblab-lint</artifactId>
-                        <version>0.4-SNAPSHOT</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-        </plugins>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.20</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.gaul</groupId>
-                    <artifactId>modernizer-maven-plugin</artifactId>
-                    <version>1.3.0</version>
-                    <configuration>
-                        <javaVersion>1.8</javaVersion>
-                        <includeTestClasses>false</includeTestClasses>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <id>modernizer</id>
-                            <phase>verify</phase>
-                            <goals>
-                                <goal>modernizer</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/cambridgeweblab/releases</url>
+        </repository>
+    </distributionManagement>
 
     <reporting>
         <plugins>
