--- a/weblab-json-schema/pom.xml
+++ b/weblab-json-schema/pom.xml
@@ -3,9 +3,10 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>weblab-api-schema</artifactId>
-        <groupId>ucles.weblab</groupId>
-        <version>2.0.0-SNAPSHOT</version>
+        <groupId>com.github.cambridgeweblab.api-schema</groupId>
+        <artifactId>parent</artifactId>
+        <version>2.3.0-SNAPSHOT</version>
+        <relativePath>../parent</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -13,11 +14,11 @@
 
     <dependencies>
         <dependency>
-            <groupId>ucles.weblab</groupId>
+            <groupId>com.github.cambridgeweblab.common-java</groupId>
             <artifactId>weblab-common</artifactId>
         </dependency>
         <dependency>
-            <groupId>ucles.weblab</groupId>
+            <groupId>com.github.cambridgeweblab.api-schema</groupId>
             <artifactId>weblab-cross-context</artifactId>
         </dependency>
         <dependency>
@@ -38,7 +39,7 @@
             <artifactId>jackson-module-jsonSchema</artifactId>
         </dependency>
         <dependency>
-            <groupId>ucles.weblab</groupId>
+            <groupId>com.github.cambridgeweblab.spring-boot-starters</groupId>
             <artifactId>weblab-spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
