--- a/weblab-cross-context/pom.xml
+++ b/weblab-cross-context/pom.xml
@@ -3,9 +3,10 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>weblab-api-schema</artifactId>
-        <groupId>ucles.weblab</groupId>
-        <version>2.0.0-SNAPSHOT</version>
+        <groupId>com.github.cambridgeweblab.api-schema</groupId>
+        <artifactId>parent</artifactId>
+        <version>2.3.0-SNAPSHOT</version>
+        <relativePath>../parent</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -13,7 +14,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>ucles.weblab</groupId>
+            <groupId>com.github.cambridgeweblab.common-java</groupId>
             <artifactId>weblab-common</artifactId>
         </dependency>
         <dependency>
@@ -29,6 +30,11 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.hateoas</groupId>
@@ -54,8 +60,9 @@
             <version>${spring-boot.version}</version>
         </dependency>
         <dependency>
-            <groupId>ucles.weblab</groupId>
-            <artifactId>weblab-spring-boot-starter-test</artifactId>
+            <groupId>com.github.cambridgeweblab</groupId>
+            <artifactId>test-support</artifactId>
+            <version>2.3.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
         <dependency>
