--- a/weblab-forms/pom.xml
+++ b/weblab-forms/pom.xml
@@ -3,9 +3,10 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>weblab-api-schema</artifactId>
-        <groupId>ucles.weblab</groupId>
-        <version>2.0.0-SNAPSHOT</version>
+        <groupId>com.github.cambridgeweblab.api-schema</groupId>
+        <artifactId>parent</artifactId>
+        <version>2.3.0-SNAPSHOT</version>
+        <relativePath>../parent</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -38,15 +39,15 @@
     <dependencies>
         <!-- weblab -->
         <dependency>
-            <groupId>ucles.weblab</groupId>
+            <groupId>com.github.cambridgeweblab.common-java</groupId>
             <artifactId>weblab-common</artifactId>
         </dependency>
         <dependency>
-            <groupId>ucles.weblab</groupId>
+            <groupId>com.github.cambridgeweblab.api-schema</groupId>
             <artifactId>weblab-json-schema</artifactId>
         </dependency>
         <dependency>
-            <groupId>ucles.weblab</groupId>
+            <groupId>com.github.cambridgeweblab.api-schema</groupId>
             <artifactId>weblab-cross-context</artifactId>
         </dependency>
         <!--Spring -->
@@ -109,8 +110,8 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>ucles.weblab</groupId>
-            <artifactId>weblab-spring-boot-starter-test</artifactId>
+            <groupId>com.github.cambridgeweblab</groupId>
+            <artifactId>test-support</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
