--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -73,8 +73,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
-                <version>3.7</version>
+                <version>3.14.0</version>
                 <configuration>
+                    <failOnViolation>false</failOnViolation>
                     <rulesets>
                         <ruleset>lint/pmd-ruleset.xml</ruleset>
                     </rulesets>
@@ -107,7 +108,7 @@
                 <plugin>
                     <groupId>org.gaul</groupId>
                     <artifactId>modernizer-maven-plugin</artifactId>
-                    <version>1.3.0</version>
+                    <version>2.1.0</version>
                     <configuration>
                         <javaVersion>1.8</javaVersion>
                         <includeTestClasses>false</includeTestClasses>
@@ -131,8 +132,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
-                <version>3.7</version>
+                <version>3.14.0</version>
                 <configuration>
+                    <failOnViolation>false</failOnViolation>
                     <rulesets>
                         <ruleset>lint/pmd-ruleset.xml</ruleset>
                     </rulesets>
