fix(tests): Add deps so we get embedded auto-download MongoDB

--- a/weblab-forms/pom.xml
+++ b/weblab-forms/pom.xml
@@ -89,6 +89,18 @@
             <artifactId>jackson-module-jsonSchema</artifactId>
         </dependency>
 
+        <!-- Embedded MongoDB for tests -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>de.flapdoodle.embed</groupId>
+            <artifactId>de.flapdoodle.embed.mongo</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>net.rossillo.mvc.cache</groupId>
             <artifactId>spring-mvc-cache-control</artifactId>
